--- a/AlgorithmCode/src/LC/jsMethodRecord.html
+++ b/AlgorithmCode/src/LC/jsMethodRecord.html
@@ -5,8 +5,35 @@
     <title>Title</title>
 </head>
 <body>
+<div id="demo"></div>
 
 <script>
+    var x=document.getElementById("demo");
+    function getLocation()
+    {
+        if (navigator.geolocation)
+        {
+            navigator.geolocation.getCurrentPosition(showPosition);
+        }
+        else
+        {
+            x.innerHTML="该浏览器不支持获取地理位置。";
+        }
+    }
+    function showPosition(position)
+    {
+        x.innerHTML="纬度: " + position.coords.latitude +
+            "<br>经度: " + position.coords.longitude;
+    }
+
+    if (navigator.geolocation)
+    {
+        navigator.geolocation.getCurrentPosition(showPosition);
+    }
+    else
+    {
+        x.innerHTML="该浏览器不支持获取地理位置。";
+    }
 
     function encode(){
         let str = encodeURI("你好");
@@ -15,12 +42,15 @@
     }
     encode();
 
-    //解决'，'和','的兼容问题
-    var str ="1,2,3，4，5,"
-    str=str.replaceAll('，',',');
-    console.log(str)
-    var list = str.split(',')
-    console.log(list)
+    function strSplit(str){
+        // var str ="1,2,3，4，5,"
+        //解决'，'和','的兼容问题
+        str=str.replaceAll('，',',');
+        console.log(str)
+        var list = str.split(',')
+        console.log(list)
+    }
+
 </script>
 
 </body>
