--- a/AlgorithmCode/src/javaScript/empty.html
+++ b/AlgorithmCode/src/javaScript/empty.html
@@ -6,27 +6,13 @@
 
 </head>
 <body>
-<button id ="bt1" onclick="iplus()">click</button>
+<button id ="bt1" onclick="doIt()">click</button>
 <script>
-        i=1;
-</script>
-<script>
-    class test{
-        i=1111;
+    function doIt(){
+        window.location.href=""
     }
-    cl=new test;
-    console.log(cl.i);
-
-    //解决'，'和','的兼容问题
-    function strSplit(str) {
-        // var str ="1,2,3，4，5,"
-        str = str.replaceAll('，', ',');
-        console.log(str)
-        var list = str.split(',')
-        console.log(list)
-    }
-
 </script>
+
 
 </body>
 </html>
