--- a/AlgorithmCode/src/javaScript/empty.html
+++ b/AlgorithmCode/src/javaScript/empty.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-<button id ="bt1" onclick="doIt()">click</button>
+<button id ="bt1" class="go-btn" onclick="doIt()">click</button>
 <script>
     function doIt(){
         window.location.href=""
