--- a/AlgorithmCode/src/javaScript/JSMethodTest.html
+++ b/AlgorithmCode/src/javaScript/JSMethodTest.html
@@ -37,7 +37,6 @@ style="display: none "
     for (let dlistElement of dlist) {
         dlistElement.style.display='none';
     }
-
     document.getElementById('');
 </script>
 
@@ -82,6 +81,28 @@ console.log('图片', reader.result); //获取到base64格式图片
             dataType: "json" /*设置返回值类型为文本*/
         });
     });
+
+    public TreeNode buildTree(int[] preorder, int[] inorder) {
+        int start =0;
+        int end =inorder.length-1;
+        int p=0;
+        int i=0;
+        TreeNode root=new TreeNode(preorder[p]);
+        int idx = getTarget(inorder, preorder[p]);
+        root.left= getNode(preorder,inorder,1,idx-1);
+        root.right=getNode(preorder,inorder,idx+1, inorder.length-1);
+        int flag=0;
+        TreeNode tmp=new TreeNode(preorder[p]);
+        if (inorder[i]==preorder[p]){
+            tmp.left = null;
+        }else {
+            tmp.left=new TreeNode(preorder[p]);
+
+        }
+        return null;
+    }
+
+
 
     //v2  delete button
     $(".doit").before("  <form enctype=\"multipart/form-data\" id=\"fileUpload\">\n" +
